--- a/packages/components/src/components/select/single-select/select.scss
+++ b/packages/components/src/components/select/single-select/select.scss
@@ -86,16 +86,17 @@
     }
 
     &:hover:not(.focus, :focus) {
-      border-color: #8D8786;
+      border-color: tokens.$ifxColorEngineering500;
     }
 
     &.active {
-      box-shadow: 0 0 0 1px #0A8276 !important; // Active border color
+      border-color: tokens.$ifxColorOcean500 !important; // Active border color
 
       & .ifx-choices__icon-wrapper-up {
         display: flex;
         align-items: center;
         justify-content: center;
+        padding-left: tokens.$ifxSpace100;
 
       }
 
@@ -145,6 +146,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      padding-left: tokens.$ifxSpace100;
 
       &:hover {
         cursor: pointer;
@@ -221,7 +223,7 @@ END Select options: item alignment
     display: block;
     width: 100%;
     padding: 8px 16px;
-    border-bottom: 1px solid #dddddd;
+    border-bottom: 1px solid tokens.$ifxColorEngineering400;
     background-color: #ffffff;
     margin: 0;
     font-style: normal;
